--- a/index.html
+++ b/index.html
@@ -437,29 +437,65 @@
 
             </h1>
 
-            <p><a href="https://www.mdpi.com/1424-8220/18/7/2229/htm">An Indoor Positioning System Based on Static Objects in Large Indoor Scenes by Using Smartphone Cameras</a>
-              <br><a href="https://arxiv.org/pdf/1511.04668.pdf">Deep Neural Network for Real-Time Autonomous Indoor Navigation</a><br>
-              <a href="https://www.researchgate.net/publication/228411072_Heading_Change_Detection_for_Indoor_Navigation_with_a_Smartphone_Camera">Heading Change Detection for Indoor Navigation with a Smartphone Camera </a></p>
+            <div id="ref1">
+              <p>
+                Xiao, A., Chen, R., Li, D., Chen, Y., & Wu, D. (2018). <a href="https://www.mdpi.com/1424-8220/18/7/2229/htm">An Indoor Positioning System Based on Static Objects in Large Indoor Scenes by Using Smartphone Cameras</a> Sensors, 18(7),
+                2229. doi: 10.3390/s18072229<br>
+                Synopsis: A journal article where authors propose a system to detect static objects in large indoor spaces and then calculate the smartphone’s position to locate users. The system integrates algorithms of deep learning and computer
+                vision.<br>
+                Reliability: The paper is supported by the National Key Research and Development Program of China, the NSFC, the State Key Laboratory Research Expenses of LIESMARS. Sensors is the leading international peer-reviewed open access
+                journal on the science and technology of sensors and biosensors , published semi-monthly online by MDPI.
 
-            <h1>Interesting Readings </h1>
-            <h3>Visual SLAM:</h3>
-            <p>
-              <a href="https://ipsjcva.springeropen.com/articles/10.1186/s41074-017-0027-2">Visual SLAM algorithms: a survey from 2010 to 2016</a><br>
-              <a href="https://community.arm.com/developer/tools-software/graphics/b/blog/posts/introducing-slam-technology">Introducing SLAM</a><br>
-              <a href="https://www.doc.ic.ac.uk/~ab9515/introductiontomonocular.html">Monocular Simultaneous Location and Mapping</a><br>
-            </p>
+              </p>
+            </div>
 
-            <h3>VSLAM based research papers on Indoor Navigation with RGB-D camera:</h3>
-            <p>
+            <div id="ref2">
+              <p>
+                Kim, Dong & Chen, Tsuhan. (2015).<a href="https://arxiv.org/pdf/1511.04668.pdf">Deep Neural Network for Real-Time Autonomous Indoor Navigation </a> arXiv:1511.04668v2 [cs.CV] 26 Nov 2015 <br>
+                Synopsis: In this paper, authors propose a practical system in which a quadcopter autonomously navigates indoors and finds a specific target, i.e. a book bag, by using a single camera. A deep learning model, Convolutional Neural
+                Network (ConvNet), is used to learn a controller strategy that mimics an expert pilot’s choice of action.
+                <br>Reliability: Prof Chen Tsuhan is the Deputy President (Research and Technology) at National University of Singapore. He is currently the Chief Scientist of AI Singapore. Prior to his current appoint he was the Dean of the College
+                of Engineering[1]at Nanyang Technological University from 2015 to 2017[2]. He was previously Director of the School of Electrical and Computer Engineering at Cornell University from 2009 to 2013.[3][4] He is also an Honorary Professor
+                in Computer Science at National Chao Tung University, Taiwan. arXiv is a premier repository of electronic preprints approved for posting after moderation, but not full peer review.
+              </p>
+            </div>
+            <div id="ref3">
+              <p>
+                Ruotsalainen, Laura & Kuusniemi, Heidi & Chen, Ruizhi. (2011). <a href"https://ieeexplore-ieee-org.proxylib.csueastbay.edu/document/6071924 ">Heading Change Detection for Indoor Navigation with a Smartphone Camera.</a> International Conference on Indoor Positioning and Indoor Navigation, IPIN 2011. 21-23. 10.1109/IPIN.2011.6071924.
+<br>Synopsis: This paper presents a solution to indoor navigation problem based on vanishing points calculated from lines in consecutive images.
+<br>Reliability: Laura Ruotsalainen is currently a Research Manager and the Deputy Director of the Department of Navigation and Positioning, Finnish Geospatial Research Institute, Kirkkonummi, Finland, where she leads the Research Group on Sensors and Indoor Navigation. Heidi Kuusniemi is the head of the Department and a Professor with the Department of Navigation and Positioning, Finnish Geodetic Institute. Ruizhi Chen was an Endowed Chair and a Professor with Texas A&M University Corpus Christ, USA, and the Head and a Professor of the Department of Navigation and Positioning, Finnish Geodetic Institute, Finland.
+</p></div>
+<div id="ref4">
+  <p>
+    Zhang, Xiaochen & Li, Bing & Joseph, Samleo & Xiao, Jizhong & Sun, Yi & Tian, Yingli & Munoz, J. & Yi, Chucai. (2015).  <a href="https://ieeexplore-ieee-org.proxylib.csueastbay.edu/document/7379390"> A SLAM Based Semantic Indoor Navigation System for Visually Impaired Users.</a>
+ 1458-1463. 10.1109/SMC.2015.258.
+<br>
+Synopsis: This paper proposes a navigation system based on simultaneous localization and mapping (SLAM) and semantic path planning. This system uses multiple wearable sensors and feedback devices including a RGB-D sensor and an inertial measurement unit (IMU) on the waist, a head mounted camera, a microphone and an earplug/speaker.
+<br>Reliability: Jizhong Xiao is a senior member of IEEE and has published more than 160 research articles in peer reviewed journal and conferences. Yingli Tian has been a Professor with the Department of Electrical Engineering, The City College and the Department of Computer Science, The Graduate Center, The City University of New York, since 2008. She is one of the Inventors of the IBM Smart Surveillance Solutions.
+  </p>
+</div>
 
-              <a href="https://ieeexplore-ieee-org.proxylib.csueastbay.edu/document/8614006"> Monocular SLAM and Obstacle Removal for Indoor Navigation </a><br>
-              <a href="https://ieeexplore-ieee-org.proxylib.csueastbay.edu/document/8737640">Pair-Navi: Peer-to-Peer Indoor Navigation with Mobile Visual SLAM</a><br>
+<div id="ref5">
+  <p>
+    Taketomi, Takafumi & Uchiyama, Hideaki & Ikeda, Sei. (2017).  <a href=" https://ipsjcva.springeropen.com/articles/10.1186/s41074-017-0027-2">Visual SLAM algorithms: a survey from 2010 to 2016.</a> IPSJ Transactions on Computer Vision and Applications. 9. 10.1186/s41074-017-0027-2.
+<br>Synopsis: This paper categorizes and summarizes recent vSLAM algorithms proposed in different research communities from both technical and historical points of views.
+<br>Reliability: Takafumi Taketomi is a Senior Engineer at Huawei Japan Research Center. Also, he is an Affiliate Associate Professor at the Interactive Media Design Laboratory, Graduate School of Information Science, Nara Institute of Science and Technology, JAPAN. Hideaki Uchiyama is an Associate Professor at National University Corporation Kyushu University
 
-              <a href="https://ieeexplore-ieee-org.proxylib.csueastbay.edu/document/7379390"> A SLAM Based Semantic Indoor Navigation System for Visually Impaired Users</a>
 
-            </p>
+</p>
+</div>
+<div id="ref6">
+  <p>
 
-          </div>
+ Sylwester Bala.<a href=" https://community.arm.com/developer/tools-software/graphics/b/blog/posts/introducing-slam-technology">“Introducing SLAM”.</a> ARM community<br>
+Synopsis:It’s a short introduction to SLAM.<br>
+Reliability:This is an article in a blog on arm community.The author is a senior software engineer at ARM.
+</p>
+</div>
+
+
+
+            </div>
 
         </section>
 
