--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
               <br>Challenges specific to VSLAM technique:
               <br>
               1.Unknown environment-In SLAM,we don't use preloaded maps or building layouts<br>
-              2.Smartphone cameras have single camera and its difficult to obtain depth data from image.
+              2.Smartphone cameras have single camera and its difficult to obtain depth data from image.<br>
               3.Complex Calculations
 
             </p>
