added further reading

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
             <img src="images/corridor1.jpg" alt="corridor1" class="mx-auto d-block">
             <img src="images/corridor2.jpg" alt="corridor2" class="mx-auto d-block">
 
-            <p >Fig  <a href="#ref1">[1] </a>Image of corridor1 on top and corridor 2 on bottom. Blue lines were found with Hough transformation and the red spot shows the place of the vanishing point </p>
+            <p>Fig <a href="#ref1">[1] </a>Image of corridor1 on top and corridor 2 on bottom. Blue lines were found with Hough transformation and the red spot shows the place of the vanishing point </p>
 
 
             <h3>2.VSLAM</h3>
@@ -236,17 +236,18 @@
               <b>3.Back-End:</b> Here, relationship between the video frames,device orientation and geometrical reconstruction is done.<br>
               <b>4.SLAM estimate: </b>This is the reslut from the above part that contains detected features and device postion in the area.<br><br>
               <img src="images/slamOverview.jpg" alt="slam overview" class="mx-auto d-block"><br>
-              <p >Fig  <a href="#ref2">[2] </a> SLAM based System overview</p><br>
+              <p>Fig <a href="#ref2">[2] </a> SLAM based System overview</p><br>
 
 
               <img src="images/slam2.jpg" alt="slam system" class="mx-auto d-block"><br>
-              <p >Fig  <a href="#ref3">[3] </a>SLAM based System architecture</p><br>
+              <p>Fig <a href="#ref3">[3] </a>SLAM based System architecture</p><br>
 
 
               <img src="images/slammethods.jpg" alt="slam methods" class="mx-auto d-block"><br>
-              <p>Fig <a href="#ref4">[4] </a>  SLAM Methods</p>
+              <p>Fig <a href="#ref4">[4] </a> SLAM Methods</p>
 
-              VSLAM is based on developing visual odometry from RGB-D data from the images.<a href="#ref5">[5] </a> Hence it requires per-pixel depth sensing RGB-D camera which isn’t available in most of the smartphones today. Since depth cannot be directly inferred from a
+              VSLAM is based on developing visual odometry from RGB-D data from the images.<a href="#ref5">[5] </a> Hence it requires per-pixel depth sensing RGB-D camera which isn’t available in most of the smartphones today. Since depth cannot be
+              directly inferred from a
               single image from a smartphone camera, it must be calculated through analyzing images in the chain of frames in the video using an Extended Kalman filter. Also, this method has complex computations due to which there could be
               considerable amount of delay in 3D reconstructions. Hence it is difficult to use VSLAM technique for Indoor navigation solution using current day smartphones.
             </p>
@@ -267,7 +268,7 @@
               <img src="images/controlpoints.jpg" alt="System Flow Diagram" class="mx-auto d-block">
               <p> Algorithm to obtain Pixel Coordinates of Control Points in Test Images<a href="#ref6">[6] </a></p>
               <img src="images/controlpointoutput.jpg" alt="Sample output" class="mx-auto d-block">
-              <p >Fig<a href="#ref6">[6] </a> An example of output of above algorithm. The pixel coordinates of control points in test image are obtained from reference image.</p>
+              <p>Fig<a href="#ref6">[6] </a> An example of output of above algorithm. The pixel coordinates of control points in test image are obtained from reference image.</p>
               <b>Position Estimation: </b>The geometric relation between control points in image and object space is determined via collinear equation <br>
               <b>Distance Estimation: </b>In order to avoid gross error for the final position, distance estimation is then implemented to check the output of collinear equation model.
             </p>
@@ -443,75 +444,110 @@
             </h1>
             <div id="ref1">
               <p>
-              [1] Ruotsalainen, Laura & Kuusniemi, Heidi & Chen, Ruizhi. (2011). <a href="https://ieeexplore-ieee-org.proxylib.csueastbay.edu/document/6071924">Heading Change Detection for Indoor Navigation with a Smartphone Camera.</a> International Conference on Indoor Positioning and Indoor Navigation, IPIN 2011. 21-23. 10.1109/IPIN.2011.6071924.
-        <br>Synopsis: This paper presents a solution to indoor navigation problem based on vanishing points calculated from lines in consecutive images.
-        <br>Reliability: Laura Ruotsalainen is currently a Research Manager and the Deputy Director of the Department of Navigation and Positioning, Finnish Geospatial Research Institute, Kirkkonummi, Finland, where she leads the Research Group on Sensors and Indoor Navigation. Heidi Kuusniemi is the head of the Department and a Professor with the Department of Navigation and Positioning, Finnish Geodetic Institute. Ruizhi Chen was an Endowed Chair and a Professor with Texas A&M University Corpus Christ, USA, and the Head and a Professor of the Department of Navigation and Positioning, Finnish Geodetic Institute, Finland.
-        </p></div>
+                [1] Ruotsalainen, Laura & Kuusniemi, Heidi & Chen, Ruizhi. (2011). <a href="https://ieeexplore-ieee-org.proxylib.csueastbay.edu/document/6071924">Heading Change Detection for Indoor Navigation with a Smartphone Camera.</a>
+                International Conference on Indoor Positioning and Indoor Navigation, IPIN 2011. 21-23. 10.1109/IPIN.2011.6071924.
+                <br>Synopsis: This paper presents a solution to indoor navigation problem based on vanishing points calculated from lines in consecutive images.
+                <br>Reliability: Laura Ruotsalainen is currently a Research Manager and the Deputy Director of the Department of Navigation and Positioning, Finnish Geospatial Research Institute, Kirkkonummi, Finland, where she leads the Research
+                Group on Sensors and Indoor Navigation. Heidi Kuusniemi is the head of the Department and a Professor with the Department of Navigation and Positioning, Finnish Geodetic Institute. Ruizhi Chen was an Endowed Chair and a Professor with
+                Texas A&M University Corpus Christ, USA, and the Head and a Professor of the Department of Navigation and Positioning, Finnish Geodetic Institute, Finland.
+              </p>
+            </div>
 
 
             <div id="ref2">
               <p>
-            [2] Han, Shibo & Ahmed, Minhaz & Rhee, Phill. (2018).<a href="https://ieeexplore-ieee-org.proxylib.csueastbay.edu/document/8614006"> Monocular SLAM and Obstacle Removal for Indoor Navigation.</a> 67-76. 10.1109/iCMLDE.2018.00023.<br>
-            Synopsis: This paper aims at removing the obstacle to enhance the SLAM system performance that based on popular open source framework ORB-SLAM2 in dynamic environment.<br>
-            Reliability:  Since 1992, Phill Kyu Rhee has been an Associate Professor in the Department of Computer Science and Engineering of the INHA University, Incheon, Korea and since 2001, he is a professor in the same department and university. This article’s work was supported by Basic Science Research Program through the National Research Foundation of Korea(NRF) funded by the Ministry of Education
-          </p>
-        </div>
-
-        <div id="ref3">
-          <p>
-            [3] Zhang, Xiaochen & Li, Bing & Joseph, Samleo & Xiao, Jizhong & Sun, Yi & Tian, Yingli & Munoz, J. & Yi, Chucai. (2015).  <a href="https://ieeexplore-ieee-org.proxylib.csueastbay.edu/document/7379390"> A SLAM Based Semantic Indoor Navigation System for Visually Impaired Users.</a>
-         1458-1463. 10.1109/SMC.2015.258.
-        <br>
-        Synopsis: This paper proposes a navigation system based on simultaneous localization and mapping (SLAM) and semantic path planning. This system uses multiple wearable sensors and feedback devices including a RGB-D sensor and an inertial measurement unit (IMU) on the waist, a head mounted camera, a microphone and an earplug/speaker.
-        <br>Reliability: Jizhong Xiao is a senior member of IEEE and has published more than 160 research articles in peer reviewed journal and conferences. Yingli Tian has been a Professor with the Department of Electrical Engineering, The City College and the Department of Computer Science, The Graduate Center, The City University of New York, since 2008. She is one of the Inventors of the IBM Smart Surveillance Solutions.
-          </p>
-        </div>
-        <div id="ref4">
-          <p>
-
-      [4] Sylwester Bala.<a href=" https://community.arm.com/developer/tools-software/graphics/b/blog/posts/introducing-slam-technology">“Introducing SLAM”.</a> ARM community<br>
-        Synopsis:It’s a short introduction to SLAM.<br>
-        Reliability:This is an article in a blog on arm community.The author is a senior software engineer at ARM.
-        </p>
-        </div>
-
-        <div id="ref5">
-          <p>
-        [5] Taketomi, Takafumi & Uchiyama, Hideaki & Ikeda, Sei. (2017).  <a href=" https://ipsjcva.springeropen.com/articles/10.1186/s41074-017-0027-2">Visual SLAM algorithms: a survey from 2010 to 2016.</a> IPSJ Transactions on Computer Vision and Applications. 9. 10.1186/s41074-017-0027-2.
-        <br>Synopsis: This paper categorizes and summarizes recent vSLAM algorithms proposed in different research communities from both technical and historical points of views.
-        <br>Reliability: Takafumi Taketomi is a Senior Engineer at Huawei Japan Research Center. Also, he is an Affiliate Associate Professor at the Interactive Media Design Laboratory, Graduate School of Information Science, Nara Institute of Science and Technology, JAPAN. Hideaki Uchiyama is an Associate Professor at National University Corporation Kyushu University
-
-
-        </p>
-        </div>
-
-
-
-
-
-
-
-
-<div id="ref6">
-  <p>
-  [6] Xiao, A., Chen, R., Li, D., Chen, Y., & Wu, D. (2018). <a href="https://www.mdpi.com/1424-8220/18/7/2229/htm">An Indoor Positioning System Based on Static Objects in Large Indoor Scenes by Using Smartphone Cameras</a> Sensors, 18(7),
-    2229. doi: 10.3390/s18072229<br>
-    Synopsis: A journal article where authors propose a system to detect static objects in large indoor spaces and then calculate the smartphone’s position to locate users. The system integrates algorithms of deep learning and computer
-    vision.<br>
-    Reliability: The paper is supported by the National Key Research and Development Program of China, the NSFC, the State Key Laboratory Research Expenses of LIESMARS. Sensors is the leading international peer-reviewed open access
-    journal on the science and technology of sensors and biosensors , published semi-monthly online by MDPI.
-
-  </p>
-</div>
-
-
-
-
+                [2] Han, Shibo & Ahmed, Minhaz & Rhee, Phill. (2018).<a href="https://ieeexplore-ieee-org.proxylib.csueastbay.edu/document/8614006"> Monocular SLAM and Obstacle Removal for Indoor Navigation.</a> 67-76. 10.1109/iCMLDE.2018.00023.<br>
+                Synopsis: This paper aims at removing the obstacle to enhance the SLAM system performance that based on popular open source framework ORB-SLAM2 in dynamic environment.<br>
+                Reliability: Since 1992, Phill Kyu Rhee has been an Associate Professor in the Department of Computer Science and Engineering of the INHA University, Incheon, Korea and since 2001, he is a professor in the same department and
+                university. This article’s work was supported by Basic Science Research Program through the National Research Foundation of Korea(NRF) funded by the Ministry of Education
+              </p>
             </div>
 
+            <div id="ref3">
+              <p>
+                [3] Zhang, Xiaochen & Li, Bing & Joseph, Samleo & Xiao, Jizhong & Sun, Yi & Tian, Yingli & Munoz, J. & Yi, Chucai. (2015). <a href="https://ieeexplore-ieee-org.proxylib.csueastbay.edu/document/7379390"> A SLAM Based Semantic Indoor
+                  Navigation System for Visually Impaired Users.</a>
+                1458-1463. 10.1109/SMC.2015.258.
+                <br>
+                Synopsis: This paper proposes a navigation system based on simultaneous localization and mapping (SLAM) and semantic path planning. This system uses multiple wearable sensors and feedback devices including a RGB-D sensor and an
+                inertial measurement unit (IMU) on the waist, a head mounted camera, a microphone and an earplug/speaker.
+                <br>Reliability: Jizhong Xiao is a senior member of IEEE and has published more than 160 research articles in peer reviewed journal and conferences. Yingli Tian has been a Professor with the Department of Electrical Engineering, The
+                City College and the Department of Computer Science, The Graduate Center, The City University of New York, since 2008. She is one of the Inventors of the IBM Smart Surveillance Solutions.
+              </p>
+            </div>
+            <div id="ref4">
+              <p>
+
+                [4] Sylwester Bala.<a href=" https://community.arm.com/developer/tools-software/graphics/b/blog/posts/introducing-slam-technology">“Introducing SLAM”.</a> ARM community<br>
+                Synopsis:It’s a short introduction to SLAM.<br>
+                Reliability:This is an article in a blog on arm community.The author is a senior software engineer at ARM.
+              </p>
+            </div>
+
+            <div id="ref5">
+              <p>
+                [5] Taketomi, Takafumi & Uchiyama, Hideaki & Ikeda, Sei. (2017). <a href=" https://ipsjcva.springeropen.com/articles/10.1186/s41074-017-0027-2">Visual SLAM algorithms: a survey from 2010 to 2016.</a> IPSJ Transactions on Computer
+                Vision and Applications. 9. 10.1186/s41074-017-0027-2.
+                <br>Synopsis: This paper categorizes and summarizes recent vSLAM algorithms proposed in different research communities from both technical and historical points of views.
+                <br>Reliability: Takafumi Taketomi is a Senior Engineer at Huawei Japan Research Center. Also, he is an Affiliate Associate Professor at the Interactive Media Design Laboratory, Graduate School of Information Science, Nara Institute
+                of Science and Technology, JAPAN. Hideaki Uchiyama is an Associate Professor at National University Corporation Kyushu University
+
+
+              </p>
+            </div>
+
+
+
+
+
+
+
+
+            <div id="ref6">
+              <p>
+                [6] Xiao, A., Chen, R., Li, D., Chen, Y., & Wu, D. (2018). <a href="https://www.mdpi.com/1424-8220/18/7/2229/htm">An Indoor Positioning System Based on Static Objects in Large Indoor Scenes by Using Smartphone Cameras</a> Sensors,
+                18(7),
+                2229. doi: 10.3390/s18072229<br>
+                Synopsis: A journal article where authors propose a system to detect static objects in large indoor spaces and then calculate the smartphone’s position to locate users. The system integrates algorithms of deep learning and computer
+                vision.<br>
+                Reliability: The paper is supported by the National Key Research and Development Program of China, the NSFC, the State Key Laboratory Research Expenses of LIESMARS. Sensors is the leading international peer-reviewed open access
+                journal on the science and technology of sensors and biosensors , published semi-monthly online by MDPI.
+
+              </p>
+            </div>
+
+            <h3>Further reading:</h3>
+
+
+            <div id="ref7">
+
+              <p>
+                1. Kim, Dong & Chen, Tsuhan. (2015).<a href="https://arxiv.org/pdf/1511.04668.pdf">Deep Neural Network for Real-Time Autonomous Indoor Navigation </a> arXiv:1511.04668v2 [cs.CV] 26 Nov 2015 <br>
+                Synopsis: In this paper, authors propose a practical system in which a quadcopter autonomously navigates indoors and finds a specific target, i.e. a book bag, by using a single camera. A deep learning model, Convolutional Neural
+                Network (ConvNet), is used to learn a controller strategy that mimics an expert pilot’s choice of action.
+                <br>Reliability: Prof Chen Tsuhan is the Deputy President (Research and Technology) at National University of Singapore. He is currently the Chief Scientist of AI Singapore. Prior to his current appoint he was the Dean of the College
+                of Engineering[1]at Nanyang Technological University from 2015 to 2017[2]. He was previously Director of the School of Electrical and Computer Engineering at Cornell University from 2009 to 2013.[3][4] He is also an Honorary Professor
+                in Computer Science at National Chao Tung University, Taiwan. arXiv is a premier repository of electronic preprints approved for posting after moderation, but not full peer review.
+              </p>
+            </div>
+
+            <div id="ref8">
+
+              <p>
+                2.<a href="https://www.doc.ic.ac.uk/~ab9515/introductiontomonocular.html">Monocular Simultaneous Location and Mapping</a> <br>
+                Synopsis: Information on various SLAM methods and algorithms.<br>
+                Reliability: This website is by students of Department of Computing, Imperial College London. This website forms a part of group's project for their Computing Topics course.
+              </p>
+            </div>
+
+
+
+
+          </div>
+
         </section>
-  <section>
-    </section>
+        <section>
+        </section>
 
 
       </div>
